--- a/datanode/.properties
+++ b/datanode/.properties
@@ -13,4 +13,4 @@ jar.class.path=\
  ../votable/votable.jar \
  ../astrogrid/astrogrid.jar \
  ../aglib/aglib.jar \
- ../srb/srb/jar
+ ../srb/srb.jar
