--- a/astrogrid/build.xml
+++ b/astrogrid/build.xml
@@ -495,6 +495,7 @@
 
          <!-- Name any extension packages we directly depend on -->
          <extension name="AGLIB" href="aglib.jnlp"/>
+         <extension name="CONNECT" href="connect.jnlp"/>
        </resources>
 
        <!-- This is a component -->
