--- a/treeview/build.xml
+++ b/treeview/build.xml
@@ -614,6 +614,10 @@
          <!-- The application main jar file -->
          <jar href="${name}/${name}.jar"/>
 
+         <!-- Other library packages used by this application -->
+         <extension name="DATANODE" href="datanode.jnlp"/>
+         <extension name="AXIS" href="axis.jnlp"/>
+
          <!-- Other applications that this application uses. Note
           !   these shouuld not normally be named in the "parts"
           !   component to avoid the possibility of circular
@@ -625,31 +629,6 @@
 
        <!-- This an an application JNLP file. -->
        <application_desc main_class="uk.ac.starlink.treeview.Driver"/>
-     </jnlp>
-
-     <!-- Provide as a component (so that other applications may invoke) -->
-     <jnlp toFile="${dist.lib}/${name}-parts.jnlp" href="${name}-parts.jnlp"
-          codebase="${webstart.codebase}">
-      <information>
-         <title>Treeview - a tool for displaying hierarchical structures</title>
-         <vendor>Starlink UK</vendor>
-         <homepage href="${home.page}"/>
-         <icon href="${webstart.starlink_logo}"/>
-         <description>"Starlink Treeview - Webstart edition"</description>
-         <offline_allowed/>
-       </information>
-       <security>
-          <all_permissions/>
-       </security>
-       <resources>
-         <j2se version="1.4+"/>
-         <jar href="${name}/${name}.jar"/>
-         <extension name="DATANODE" href="datanode.jnlp"/>
-         <extension name="AXIS" href="axis.jnlp"/>
-         <extension name="JSKY" href="jsky.jnlp"/>
-         <extension name="JAIUTIL" href="jaiutil.jnlp"/>
-       </resources>
-       <component_desc/>
      </jnlp>
 
   </target>
