Add connect - otherwise topcat-lite.jar doesn't contain it

--- a/topcat/.properties
+++ b/topcat/.properties
@@ -13,6 +13,7 @@ jar.class.path=\
  ../fits/fits.jar \
  ../datanode/datanode.jar \
  ../help/jhall.jar \
+ ../connect/connect.jar \
  ../astrogrid/astrogrid.jar \
  ../srb/srb.jar \
  ../vo/vo.jar \
