Add soapserver classes for providing SOAP services.

--- a/topcat/.properties
+++ b/topcat/.properties
@@ -18,4 +18,5 @@ jar.class.path=\
  ../srb/srb.jar \
  ../vo/vo.jar \
  ../splat/splat.jar \
- ../sog/sog.jar
+ ../sog/sog.jar \
+ ../soapserver/soapserver.jar
