Replaced jasper-compiler.jar and jasper-runtime.jar with jasper-combined.jar. The original archives shared some files in common, which was causing problems elsewhere in the build system.

--- a/jetty/.properties
+++ b/jetty/.properties
@@ -1,1 +1,1 @@
-jar.class.path=javax.servlet.jar org.mortbay.jmx.jar jasper-compiler.jar jasper-runtime.jar
+jar.class.path=javax.servlet.jar org.mortbay.jmx.jar jasper-combined.jar
