Put SOAPSERVER on the path to support the -topcat flag.  If the classes are absent it the -topcat flag will simply be unavailable.  Note the TOPCAT classes themselves are not necessary (though they help in the case that a TOPCAT server is not already running).

--- a/ttools/.properties
+++ b/ttools/.properties
@@ -5,4 +5,6 @@ jar.class.path=\
  ../tamfits/tamfits.jar \
  ../fits/fits.jar \
  ../mirage/mirage.jar \
- ../votable/votable.jar
+ ../votable/votable.jar \
+ ../axis/axis.jar \
+ ../soapserver/soapserver.jar
