Fixed to pick up only testcases whose classname ends in Test.

--- a/votable/build.xml
+++ b/votable/build.xml
@@ -977,7 +977,7 @@
 
       <batchtest>
         <fileset dir="${tests.dir}">
-          <include name="**/*Test*"/>
+          <include name="**/*Test.java"/>
         </fileset>
       </batchtest>
 
