Add installation of resource files

--- a/ttools/build.xml
+++ b/ttools/build.xml
@@ -423,9 +423,8 @@
     <!-- Copy extra files that should live with packages classes
      !   (i.e. are discovered using "getResource()"). -->
     <copy todir="${build.classes}">
-      <fileset dir="${java.dir}">
-        <include name="**/{package.support.files}"/>
-        <include name="**/{more.package.support.files}"/>
+      <fileset dir="${src.dir}/resources">
+        <include name="**/*.dtd"/>
       </fileset>
     </copy>
 
