--- a/splat/.properties
+++ b/splat/.properties
@@ -1,5 +1,5 @@
 javadoc.notrequired=true
-jar.class.path=ids.jar bsh-1.2b7.jar splat_colt.jar jdom.jar splat_help.jar \
+jar.class.path=splat_lines.jar bsh-1.2b7.jar splat_colt.jar jdom.jar splat_help.jar \
 splat_examples.jar jsci_core.jar jsci_wavelet.jar jargs.jar toolbar.jar \
 ../astgui/astgui.jar ../ndx/ndx.jar ../hdx/hdx.jar ../array/array.jar \
 ../tamfits/tamfits.jar ../jniast/jniast.jar ../soapserver/soapserver.jar \
