--- a/ttools/build.xml
+++ b/ttools/build.xml
@@ -576,7 +576,7 @@
    !  targets.
    !-->
   <target name="dist"
-          depends="build,jars,javadocs,webstart"
+          depends="build,jars,javadocs,docs,webstart"
           unless="runonly.install"
           description="-> configures the local binary distribution">
 
@@ -596,7 +596,7 @@
     <!-- Copy extra documentation, note doesn't include javadocs these
      !   are generated from the source-->
     <copy todir="${dist.docs.pkg}">
-      <fileset dir="${src.docs}"
+      <fileset dir="${build.docs}"
                includes="${user.doc}/* *.pdf"/>
     </copy>
 
@@ -785,7 +785,7 @@
    ! and package-specific directories are logged to "${install.log}".
    !-->
   <target name="install"
-          depends="dist, docs"
+          depends="dist"
           description="-> installs distribution">
 
     <!-- Installation based directories (based on "star.install")-->
