--- a/ttools/build.xml
+++ b/ttools/build.xml
@@ -108,7 +108,7 @@
 
   <!-- Directory containing miscellaneous docs -->
   <property name="src.docs" value="${src.dir}/docs"/>
-  <property name="user.doc" value="sunXXX"/>
+  <property name="user.doc" value="sun256"/>
   <property name="docs.lib" value="${star.build.dir}/topcat/src/docs"/>
 
   <!-- Directory containing any script required to execute or setup package-->
