--- a/splat/.properties
+++ b/splat/.properties
@@ -5,4 +5,4 @@ splat_examples.jar jsci_core.jar jsci_wavelet.jar jargs.jar toolbar.jar \
 ../tamfits/tamfits.jar ../jniast/jniast.jar ../soapserver/soapserver.jar \
 ../fits/fits.jar ../hds/hds.jar ../pal/pal.jar \
 ../diva/diva.jar ../help/help.jar ../table/table.jar ../votable/votable.jar \
-../jsky/jsky.jar ../datanode/datanode.jar
+../jsky/jsky.jar ../datanode/datanode.jar ../vo/vo.jar
