--- a/aglib/.properties
+++ b/aglib/.properties
@@ -1,9 +1,12 @@
-jar.class.path=astrogrid-common-SNAPSHOT.jar \
-               astrogrid-community-client-SNAPSHOT.jar \
-               astrogrid-community-common-SNAPSHOT.jar \
-               astrogrid-community-resolver-SNAPSHOT.jar \
-               astrogrid-registry-client-lite-SNAPSHOT.jar \
-               astrogrid-registry-common-SNAPSHOT.jar \
-               astrogrid-store-client-SNAPSHOT.jar \
-               astrogrid-filestore-client-SNAPSHOT.jar \
+jar.class.path=astrogrid-common-1.0.1-b000c.jar \
+               astrogrid-community-client-1.0.1-b000ct.jar \
+               astrogrid-community-common-1.0.1-b000ct.jar \
+               astrogrid-community-resolver-1.0.1-b000ct.jar \
+               astrogrid-filemanager-client-1.0.1-b000fm.jar \
+               astrogrid-filemanager-contract-1.0.1-b000fm.jar \
+               astrogrid-filestore-client-1.0.1-b000fs.jar \
+               astrogrid-filestore-common-1.0.1-b000fs.jar \
+               astrogrid-registry-client-lite-1.0.1-b000r.jar \
+               astrogrid-registry-common-1.0.1-b000r.jar \
+               commons-collections-3.1.jar \
                ../axis/axis.jar
