--- a/jetty/.properties
+++ b/jetty/.properties
@@ -1,1 +1,1 @@
-jar.class.path=javax.servlet.jar org.mortbay.jmx.jar jasper-combined.jar
+jar.class.path=javax.servlet.jar org.mortbay.jmx.jar jasper-combined.jar commons-el.jar
