--- a/axis/.properties
+++ b/axis/.properties
@@ -1,2 +1,2 @@
-jar.class.path=axis-ant.jar commons-discovery.jar jaxrpc.jar saaj.jar \
-commons-logging.jar wsdl4j.jar
+jar.class.path=axis-ant.jar commons-discovery-0.2.jar jaxrpc.jar saaj.jar \
+commons-logging-1.0.4.jar wsdl4j-1.5.1.jar
