--- a/jniast/build.xml
+++ b/jniast/build.xml
@@ -454,6 +454,10 @@
       <param name="pj.cfile" value="box.c"/>
     </antcall>
     <antcall target="perl_to_java">
+      <param name="pj.class" value="Circle"/>
+      <param name="pj.cfile" value="circle.c"/>
+    </antcall>
+    <antcall target="perl_to_java">
       <param name="pj.class" value="CmpFrame"/>
       <param name="pj.cfile" value="cmpframe.c"/>
     </antcall>
@@ -782,6 +786,7 @@
       <class name="${package.name}.AstObject"/>
       <class name="${package.name}.Box"/>
       <class name="${package.name}.Channel"/>
+      <class name="${package.name}.Circle"/>
       <class name="${package.name}.CmpFrame"/>
       <class name="${package.name}.CmpMap"/>
       <class name="${package.name}.DSBSpecFrame"/>
