--- a/jniast/src/jni/makefile
+++ b/jniast/src/jni/makefile
@@ -86,6 +86,7 @@ C_ROUTINES = \
    Circle.c \
    CmpFrame.c \
    CmpMap.c \
+   CmpRegion.c \
    DSBSpecFrame.c \
    FitsChan.c \
    FluxFrame.c \
