Added PointList class.

--- a/jniast/build.xml
+++ b/jniast/build.xml
@@ -542,6 +542,10 @@
       <param name="pj.cfile" value="polymap.c"/>
     </antcall>
     <antcall target="perl_to_java">
+      <param name="pj.class" value="PointList"/>
+      <param name="pj.cfile" value="pointlist.c"/>
+    </antcall>
+    <antcall target="perl_to_java">
       <param name="pj.class" value="RateMap"/>
       <param name="pj.cfile" value="ratemap.c"/>
     </antcall>
@@ -825,6 +829,7 @@
       <class name="${package.name}.PermMap"/>
       <class name="${package.name}.Plot"/>
       <class name="${package.name}.PolyMap"/>
+      <class name="${package.name}.PointList"/>
       <class name="${package.name}.RateMap"/>
       <class name="${package.name}.Region"/>
       <class name="${package.name}.ShiftMap"/>
